2007-05-21  Alessandro Scalzo <ale@liralab.it>
	* src/libYARP_OS/include/yarp/ShmemHybridStream.h, 
	src/libYARP_OS/src/ShmemHybridStream.cpp: added a new
	two way communication stream based on shared memory.
	Synchronization obtained by socket. It has the same
	interface as ShmemTwoWayStream.

2007-05-17  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/src/PortReaderBuffer.cpp: There was a bug that
	would in some cases let a port overwrite a message currently being
	accessed by the user of the port (thanks to Jonas Ruesch for
	reporting problem).

2007-05-16  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_sig/include/yarp/sig/all.h: removed automatic
	include of IplImage.h -- clashes with opencv in some cases,
	and should be unnecessary.  Closes bug #1720180 (thanks to
	Jonas Ruesch for reporting problem).

2007-05-14  Lorenzo Natale  <nat@liralab.it>

	* src/libYARP_dev/src/firewirecamera:
	new device, video streaming from firewire bus.

2007-05-14  Lorenzo Natale  <nat@liralab.it>

	* src/libYARP_dev/src/esdMotionControl: 
	* src/libYARP_dev/src/James:
	* src/libYARP_dev/src/XSensMTx: 
	* src/libYARP_dev/src/inertiacube2:
	code removed. It is now placed in platform specific modules.

2007-05-10  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_dev/CMakeLists.txt: use TARGET_LINK_LIBRARIES
	instead of LINK_LIBRARIES so that external dependencies
	propagate correctly to any other subprojects using the device 
	library (src/yarp-framegrabbergui seems to currently need this).

	* src/libYARP_OS/src/ThreadImpl.cpp: bugfix - join was no
	longer being called in some situations due to changes made 
	for bug #1695724. This gave a memory leak, first noticed
	in the yarp name server.
	
2007-04-23  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/harness/ModuleTest.cpp: fix for the usual mac +
	ACE header file order issue.

	* src/libYARP_OS/src/IConfig.cpp: fix for the usual mac + ACE
	header file order issue.
